fix(sass/directives/03_components/flyout/_flyout.scss): add z-index to mobile flyout

--- a/sass/directives/03_components/flyout/_flyout.scss
+++ b/sass/directives/03_components/flyout/_flyout.scss
@@ -95,6 +95,7 @@
     &:hover {
       ul {
         display: block;
+        z-index: 1;
       }
 
       .mobile-subnav__top-link {
